--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,50 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  
+
+}
+
+
+#pano {
+  float: center;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+}
+
+#map {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  width: 300px;
+  height: 200px;
+  z-index: 9999;
+  border: 2px solid black;
+}
+
+#map:hover {
+  width: 500px;
+  height: 400px;
+}
+
+#submit {
+  position: fixed;     
+  bottom: 20px;         
+  left: 20px;           
+  z-index: 10000;       
+  padding: 10px 20px;  
+  font-size: 16px;     
+  background-color: #007bff; 
+  color: white;        
+  border: none;         
+  border-radius: 5px;  
+  cursor: pointer;      
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
+}
+
+
 
