--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,32 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
   
 
+}
+.navbar-purple {
+  background-color: #6f42c1; 
+  margin: 0;
+  padding: 0;
+  height: 56px;
+}
+.navbar-purple .navbar-brand,
+.navbar-purple .nav-link {
+  color: white; 
+  margin: 0;
+  padding: 0;
 }
 
 
 #pano {
   float: center;
-  height: 100%;
+  height: calc(100vh - 56px);
   width: 100%;
-  position: relative;
+  position: fixed;
   z-index: 1;
+  margin: 0; /* Remove any margin */
+  padding: 0; /* Remove any padding */
 }
 
 #map {
@@ -27,14 +42,15 @@ body {
 }
 
 #map:hover {
-  width: 500px;
-  height: 400px;
+  width: 700px;
+  height: 600px;
 }
 
 #submit {
+  
   position: fixed;     
-  bottom: 20px;         
-  left: 20px;           
+  bottom: 0px;         
+  left: 11030px;           
   z-index: 10000;       
   padding: 10px 20px;  
   font-size: 16px;     
@@ -42,7 +58,7 @@ body {
   color: white;        
   border: none;         
   border-radius: 5px;  
-  cursor: pointer;      
+  cursor:pointer;      
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
 }
 
