--- a/styles.css
+++ b/styles.css
@@ -166,9 +166,29 @@ body {
 #songName{
   position: absolute;
   top:20%;
-  left: 38%;
+  width: 100%;
+  /*left: 38%;*/
   margin-top: 20px;
+  text-align: center; 
 
 }
 
+#timer{
+  position: absolute;
+  top:8%;
+  left: 48%;
+  z-index: 999;
+  background-color: #6f42c1;
+  color:yellow;
+  font-size: x-large;
+  padding-left: 20px;
+  padding-right: 20px;
+
+
+
+
+
+
+  display: none;
+}
 
