--- a/views/home.html
+++ b/views/home.html
@@ -4,6 +4,7 @@
         <title>GlobeSense</title>
     </head>
     <body>
+        <h1 style="width: 100%; margin: auto">GlobeSense</h1>
         <p>Test</p>
         <a href="/game"><button>Play Now!</button></a>
     </body>
