--- a/views/home.html
+++ b/views/home.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <title>GlobeSense</title>
+        <link rel="stylesheet" href="/css/home.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <h1 style="width: 100%; margin: auto">GlobeSense</h1>
+        <h1 id="title">GlobeSense</h1>
         <p>Test</p>
         <a href="/game"><button>Play Now!</button></a>
     </body>
