--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,7 @@
         <a class="navbar-brand" href="#">GlobeSense</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="/">Home </a>
             </li>
         </ul>
     </div>
