--- a/views/airportMode.html
+++ b/views/airportMode.html
@@ -24,6 +24,7 @@
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="/">Home </a>
+                <a class="nav-link" href = "/airport">Airport Mode</a>
             </li>
         </ul>
     </div>
