--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,7 +1,51 @@
 body {
-    background-color: #6f42c1;
+    background-color: #6f42c1 !important;
 }
 
 #title {
     color: yellow;
+    text-align: center;
+    margin-top: 50px;
+    font-size: 70px;
+}
+
+#playButtonDiv {
+    max-width: fit-content;
+    margin-inline: auto;
+    bottom: 50px;
+}
+
+#buttonsContainer {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 20px;
+}
+
+.playButton {
+    border-radius: 30px;
+    border: none;
+    width: 150px;
+    background-color: yellow;
+    color: #6f42c1;
+    font-weight: bold;
+}
+
+#globeIcon, #airplaneIcon {
+    height: 40px;
+}
+
+.nav-item {
+    margin-left: 15px;
+}
+
+.nav-link {
+    color: yellow !important;
+    font-weight: bold !important;
+}
+
+.nav-link:hover {
+    border-bottom: 1px solid yellow;
 }
