--- a/views/home.html
+++ b/views/home.html
@@ -6,8 +6,22 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <h1 id="title">GlobeSense</h1>
-        <p>Test</p>
-        <a href="/game"><button>Play Now!</button></a>
+        <nav class="navbar">
+            <div class="container-fluid">
+                <ul class="navbar-nav d-flex flex-row ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Sign In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/register">Create an Account</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>        
+        <h1 id="title">GlobeSense!</h1>
+        <div id="buttonsContainer">
+            <a href="/game"><button class="playButton" id="playClassic">Classic <img id="globeIcon" src="https://cdn-icons-png.flaticon.com/512/6213/6213305.png"/></button></a>
+            <a href="/airport"><button class="playButton" id="playAirport">Airport <img id="airplaneIcon" src="https://icons.veryicon.com/png/o/miscellaneous/simple-one-line-icon/aircraft-66.png"/></button></a>
+        </div>
     </body>
 </html>
