--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
             <div class="container-fluid">
                 <ul class="navbar-nav d-flex flex-row ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Sign In</a>
+                        <a class="nav-link" href="/login">Sign In</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/register">Create an Account</a>
