--- a/views/signIn.html
+++ b/views/signIn.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>Sign Up</title>
+  <title>Sign In</title>
   
   <link rel="stylesheet" href="/css/styles.css">
   
@@ -13,31 +13,30 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-purple">
-      <div class="container-fluid">
-          <a class="navbar-brand" href="#">GlobeSense</a>
-          <ul class="navbar-nav">
-              <li class="nav-item">
-                  <a class="nav-link" href="/">Home </a>
-              </li>
-          </ul>
-      </div>
-    </nav>
-    <h1 id="title">Welcome!</h1>
-    <form id="registerForm" method="POST">
+  <nav class="navbar navbar-purple">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">GlobeSense</a>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/">Home </a>
+            </li>
+        </ul>
+    </div>
+  </nav>
+    <h1 id="title">Welcome Back!</h1>
+    <form id="signin" method="POST">
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username"><br>
-        <label for="email">Email:</label><br>
-        <input type="text" id="email" name="email"><br>
         <label for="password">Password</label><br>
         <input type="password" id="password" name="password"><br><br>
         <input type="submit" value="Submit">
       </form>
 
-    <script src="/js/signUp.js"></script>
+    <script src="/js/login.js"></script>
 
 
 </body>
+
 
 </html>
 
