--- a/views/malls.html
+++ b/views/malls.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Street View split-map-panes</title>
+  <title>Mall Sense</title>
   
   <link rel="stylesheet" href="/css/styles.css">
   
@@ -67,7 +67,7 @@
       --> 
 
   <script id="google-maps-js-api" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOB3wAcUOx_wjfd5KCApjhj-TYxJEd924&callback=initialize&v=weekly&loading=async" defer></script>
-  <script src="/js/airport.js"></script>
+  <script src="/js/malls.js"></script>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
