--- a/views/signUp.html
+++ b/views/signUp.html
@@ -4,7 +4,7 @@
 <head>
   <title>Sign Up</title>
   
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/authentication.css">
   
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -25,14 +25,23 @@
     </nav>
     <h1 id="title">Welcome!</h1>
     <form id="registerForm" method="POST">
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username"><br>
-        <label for="email">Email:</label><br>
-        <input type="text" id="email" name="email"><br>
-        <label for="password">Password</label><br>
-        <input type="password" id="password" name="password"><br><br>
-        <input type="submit" value="Submit">
-      </form>
+      <div class="formContainer">
+        <div>
+          <label for="username">Username</label><br>
+          <input type="text" id="username" name="username" class="inputField"><br>
+        </div>
+        <div>
+          <label for="email">Email</label><br>
+          <input type="text" id="email" name="email" class="inputField"><br>
+        </div>
+        <div>
+          <label for="password">Password</label><br>
+          <input type="password" id="password" name="password"class="inputField"><br><br>
+        </div>
+        <input type="submit" value="Submit" class="inputField">
+      </div>
+    </form>
+    
 
     <script src="/js/signUp.js"></script>
 
