Co-authored-by: riteshbhirud <riteshbhirud@users.noreply.github.com> changed navbar styling

--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
 <div id="bike-wrapper" class="center">
   <div id="bike" class="centerBike"></div>
 </div>
-  <nav class="navbar navbar-purple">
+  <nav class="navbar" id="nav">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">GlobeSense</a>
         <ul class="navbar-nav">
