--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,11 +1,12 @@
-body {
+html,body {
     /*background-color: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1)) !important;*/
     background: linear-gradient(135deg, #9d50bb, #6e48aa, #8e2de2, #4a00e0, #ff0080);
     background-size: 400% 400%;
-    animation: gradientAnimation 15s ease infinite;
-    color: white; 
+    animation: gradientAnimation 15s ease infinite; 
     padding: 1.5rem; 
     border-radius: 0.5rem;
+    width: 100%;
+    height: 100%;
 
     
 }
@@ -21,12 +22,6 @@ body {
     text-align: center;
     margin-top: 50px;
     font-size: 70px;
-}
-
-#playButtonDiv {
-    max-width: fit-content;
-    margin-inline: auto;
-    bottom: 50px;
 }
 
 #buttonsContainer {
@@ -53,6 +48,7 @@ body {
 }
 
 .nav-item {
+    margin-top: 1px;
     margin-left: 15px;
 }
 
