--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,17 +5,33 @@ body {
   padding: 0;
   overflow: hidden;
   
-  background-color: darkorange;
+  
 }
 
-.navbar-purple {
-  background-color: #6f42c1; 
+.navbar {
+  background: linear-gradient(135deg, #9d50bb, #6e48aa, #8e2de2, #4a00e0, #ff0080);
+  background-size: 400% 400%;
   margin: 0;
   padding: 0;
   height: 56px;
+  animation-name: gradientAnimation;
+  animation-duration: var(--navAnimationTime);
+  animation-timing-function: ease;
+  animation-iteration-count: infinite;  
+  /*animation: gradientAnimation var(--navAnimationTime) ease infinite;*/
+  color: white; 
+  padding: 1.5rem; 
+  
 }
-.navbar-purple .navbar-brand,
-.navbar-purple .nav-link {
+@keyframes gradientAnimation {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
+
+.navbar .navbar-brand,
+.navbar .nav-link {
   color: white; 
   margin: 0;
   padding: 0;
