--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -42,6 +42,11 @@ body {
   padding: 0;
 }
 
+.nav-item {
+  margin-top: 1px;
+  margin-left: 15px;
+}
+
 
 
 
@@ -192,13 +197,7 @@ body {
 
 
 #songName{
-  position: absolute;
-  top:20%;
-  width: 100%;
-  /*left: 38%;*/
-  margin-top: 20px;
   text-align: center; 
-
 }
 
 #timer{
@@ -211,12 +210,31 @@ body {
   font-size: x-large;
   padding-left: 20px;
   padding-right: 20px;
-
-
-
-
-
-
   display: none;
 }
 
+#resetLocationButton {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 50%; 
+  border: none; 
+  color: white;
+  z-index: 9999999;
+  position: absolute;
+  left: 15px;
+  bottom: 50px;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#resetLocationButton:hover {
+  background-color: rgba(0, 0, 0, 1);
+}
+
+
+#flagImage{
+    filter: invert(1);
+}
