--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,7 +3,6 @@ html,body {
     background: linear-gradient(135deg, #9d50bb, #6e48aa, #8e2de2, #4a00e0, #ff0080);
     background-size: 400% 400%;
     animation: gradientAnimation 15s ease infinite; 
-    padding: 1.5rem; 
     border-radius: 0.5rem;
     width: 100%;
     height: 100%;
@@ -48,13 +47,17 @@ html,body {
 }
 
 .nav-item {
-    margin-top: 1px;
-    margin-left: 15px;
+    margin-left: 20px;
+    margin-right: 10px;
 }
 
 .nav-link {
     color: yellow !important;
     font-weight: bold !important;
+}
+
+.nav-item a {
+    border-bottom: 1px solid transparent;
 }
 
 .nav-link:hover {
