--- a/views/index.html
+++ b/views/index.html
@@ -51,8 +51,11 @@
 
 <div id="gameOverScreen">
   <h1 id="gameOverMessage" style="text-align: center; margin-top: 20px;">Game Over!</h1>
-  <h3 id="Points" style="text-align: center;"> </h3>
-  <h3 id="Distance" style="text-align: center;"></h3>
+  <h3 id="Points"> </h3>
+  <div id="ProgressBar">
+    <div id ="ScoreBar"></div>
+  </div> 
+  <h3 id="Distance"></h3>
   <p id ="songName" > </p>
   <button id="playAgain">Play Again!</button>
 
