--- a/views/index.html
+++ b/views/index.html
@@ -31,6 +31,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/mall">Mall</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Log out</a>
+          </li>
         </ul>
     </div>
 </nav>
