Fixed issue with multiple event handlers triggering in multiplayer mode

--- a/views/multiplayerGame.ejs
+++ b/views/multiplayerGame.ejs
@@ -39,6 +39,7 @@
     </div>
 
     <div id="endingDiv">
+        <div id="leaderboard"></div>
         <% if (isHost) { %>
             <button type="button" id="nextRound">Start next round!</button>
         <%} %>
