--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,10 +44,17 @@
         <h1 id="title">GlobeSense!</h1>
 
 
-        <div id="buttonsContainer">
+        <div class="buttonsContainer">
             <a href="/game"><button class="playButton" id="playClassic">Classic <img class="playIcon" id="globeIcon" src="https://cdn-icons-png.flaticon.com/512/6213/6213305.png"/></button></a>
             <a href="/airport"><button class="playButton" id="playAirport">Airport <img class="playIcon"id="airplaneIcon" src="https://icons.veryicon.com/png/o/miscellaneous/simple-one-line-icon/aircraft-66.png"/></button></a>
             <a href="/mall"><button class="playButton" id="playMall">Mall <img class="playIcon" id="mallIcon" src="https://icons.veryicon.com/png/o/miscellaneous/right-angle-icon/shopping-mall-23.png"/></button></a>
+        </div>
+        <br><br><br>
+        <div id="multiplayer-buttons-label">Multiplayer</div>
+        <br>
+        <div class="buttonsContainer">
+            <a href="/createGame"><button class="playButton">Create a game</button></a>
+            <a href="/join"><button class="playButton">Join a game</button></a>
         </div>
 
         <script> function toggleDropdown() {
